<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tvNameItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvItemPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvItemPriceDiscount"
        tools:text="Wortel Berastagi" />

    <TextView
        android:id="@+id/tvItemPriceDiscount"
        style="@style/TextViewBold.OpenSans_15sp_020202"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:textColor="@color/grey_400"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvItemPrice"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dummy_item_price_discount" />

    <TextView
        android:id="@+id/tvItemPrice"
        style="@style/TextViewBold.OpenSans_20sp_020202"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemPriceDiscount"
        tools:text="@string/dummy_item_price" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPriceBargain"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_item_scale"
            android:ems="10"
            android:hint="@string/text_price_bargaining"
            android:inputType="numberDecimal"
            android:textSize="15sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBargain"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/text_bargain"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tilName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="321dp" />

</androidx.constraintlayout.widget.ConstraintLayout>