<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvNameItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Wortel Berastagi" />


    <TextView
        android:id="@+id/tvItemPrice"
        style="@style/TextViewBold.OpenSans_18sp_020202"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="2"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNameItem"
        tools:text="@string/dummy_price" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPriceBargain"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/text_price_bargaining"
        app:hintTextAppearance="@style/hintSize16sp"
        app:boxStrokeWidthFocused="1dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:theme="@style/TextViewReguler.OpenSans_14sp_020202" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBargain"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/text_bargain"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilPriceBargain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilPriceBargain" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="321dp" />

</androidx.constraintlayout.widget.ConstraintLayout>